# secret-scanner

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  cli.py  git_analyzer.py  pyproject.toml  reporter.py  scanner.py
tests/: test_secret_scanner.py
